python/testData/inspections/doNotAddFunctionInsideFromImportSource/doNotAddFunctionInsideFromImportSource.py
from mod.<caret><error descr="Cannot find reference 'unresolved' in 'mod.py'">unresolved</error> import <error descr="Unresolved reference 'something'">something</error>
